--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Chrome Extension</title>
   </head>
   <body>
+    <input type="text" id="input-el" />
+    <button id="input-btn">SAVE INPUT</button>
+    <ul id="ul-el"></ul>
+    <div class="container"></div>
     <script src="index.js"></script>
+    <script src="exercice.js"></script>
   </body>
 </html>
