--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <body>
     <input type="text" id="input-el" />
     <button id="input-btn">SAVE INPUT</button>
+    <button id="tab-btn">SAVE TAB</button>
+    <button id="delete-btn">DELETE ALL</button>
     <ul id="ul-el"></ul>
     <div class="container"></div>
     <script src="index.js"></script>
-    <script src="exercice.js"></script>
   </body>
 </html>
